# picasso

./: .bazelrc  .c  .gitignore  .gitmodules  .todo  BUILD.bazel  CITATION.cff  CMakeCache.txt  CMakeLists.txt  MODULE.bazel  Makefile  README.md  bench.sh  benchmark_report.csv  benchmark_report.json  benchmark_report.md  benchmark_results.csv  build.sh  cmake_install.cmake  compile.sh  compile_commands.json  ffi.BUILD  go.mod  go.sum  hello  hello.s  main.go  output  output.bc  output.ll  scheduler  test.rs
benchmark/go/: BUILD.bazel  main  main.go
cli/: BUILD.bazel  cli_darwin.c  cli_linux.c  main.c
e2e/: BUILD.bazel  e2e_tests.bzl  run_single_e2e.sh  test_runner.c
e2e/array_bounds_fail/: config.ini
e2e/class/access/: output.txt
e2e/class/access_fail/: utils.pic
e2e/class/field_access/: output.txt
e2e/class_field_access/: start.pic
e2e/class_field_access_fail/: start.pic
e2e/control/break_continue/: output.txt  start.pic
e2e/control/foreach/: start.pic
e2e/control/if/: start.pic
e2e/control/whileloop/: config.ini  start.pic
e2e/control_break_continue/: start.pic
e2e/control_foreach/: output.txt
e2e/control_if/: output.txt
e2e/control_whileloop/: output.txt  start.pic
e2e/ffi/: output.txt  start.pic
e2e/function_basic/: output.txt  start.pic
e2e/function_stack_overflow/: start.pic
e2e/functions/basic/: start.pic
e2e/functions/fail/: start.pic
e2e/functions/function_recursion/: output.txt  start.pic
e2e/functions/stack_overflow/: start.pic
e2e/import_basic/: math.pic  start.pic
e2e/import_basic/utils/: math.pic
e2e/import_cycle_fail/utils/: math.pic
e2e/module/import_basic/: output.txt  start.pic
e2e/module/import_cycle_fail/: config.ini  start.pic  utils.pic
e2e/runtime/null_pointer_error/: start.pic
e2e/runtime/runtime_error/: start.pic
e2e/runtime/segafult_fail/: start.pic
e2e/runtime_error/: start.pic
e2e/stdlib_array/: output.txt  start.pic
e2e/stdlibs/stdlib_array/: output.txt  start.pic
e2e/stdlibs/stdlib_concurrency/basic/: output.txt  start.pic
e2e/stdlibs/stdlib_fileio/: output.txt  start.pic
e2e/stdlibs/stdlib_netio/: output.txt  start.pic
e2e/stdlibs/stdlib_strings/: output.txt  start.pic
e2e/stdlibs/stdlib_sync/odd_even/: output.txt  start.pic
e2e/stdlibs/stdlib_types/: output.txt  start.pic
e2e/stress/concurrency/cpu_bound/: output.txt  start.pic
e2e/stress/memory/large_allocs/: output.txt  start.pic
e2e/stress/memory/mixed_allocs/: output.txt  start.pic
e2e/stress/memory/rapid_deallocs/: output.txt  start.pic
e2e/stress/memory/small_allocs/: output.txt  start.pic
e2e/types/atomics/basic/: output.txt  start.pic
e2e/types/composites/strings/: output.txt  start.pic
e2e/types/tuples/basic_return/: output.txt  start.pic
e2e/types/tuples/class_fields/: config.ini  output.txt  start.pic
e2e/types/tuples/count_mismatch_fail/: config.ini  start.pic
e2e/types/tuples/cross_module/: output.txt  start.pic  utils.pic
e2e/types/tuples/mixed_types/: output.txt  start.pic
e2e/types/tuples/multi_assignment/: output.txt  start.pic
e2e/types/tuples/multi_declaration/: output.txt  start.pic
e2e/types/tuples/type_mismatch_fail/: start.pic
irgen/: BUILD.bazel  go.mod  go.sum  main.go
irgen/ast/: BUILD.bazel  ast.go  expr.go  stmt.go  types.go
irgen/cmd/: BUILD.bazel  gen.go  root.go
irgen/codegen/: BUILD.bazel  compiler.go  constant.go  llvm.go  llvm_darwin.go  llvm_linux.go  utils.go
irgen/codegen/c/: BUILD.bazel  c.go  constants.go  funcs.go  types.go
irgen/codegen/contract/: BUILD.bazel  mediator.go
irgen/codegen/error/: BUILD.bazel  error.go
irgen/codegen/handlers/block/: BUILD.bazel  base.go  conditional.go  defineblock.go  loop.go
irgen/codegen/handlers/class/: BUILD.bazel  base.go  declareclass.go  defineclass.go
irgen/codegen/handlers/constants/: BUILD.bazel  const.go
irgen/codegen/handlers/expression/: BUILD.bazel  base.go  binary.go  callfunc.go  indexing.go  member.go  new.go  ops.go  prefix.go  string.go  symbol.go
irgen/codegen/handlers/func/: BUILD.bazel  base.go  declarefunc.go  definefunc.go
irgen/codegen/handlers/identifier/: BUILD.bazel
irgen/codegen/handlers/interface/: BUILD.bazel  base.go  declareinterface.go  defineinterface.go
irgen/codegen/handlers/mediator/: BUILD.bazel  mediator.go
irgen/codegen/handlers/scope/: BUILD.bazel  (+1 more)
irgen/codegen/libs/: BUILD.bazel  lib.go
irgen/codegen/pipeline/: BUILD.bazel  base.go  steps.go
irgen/codegen/tools/: BUILD.bazel  cache.go
irgen/codegen/type/: BUILD.bazel  array.go  bound.go  class.go  interface.go  meta.go  metaclass.go  metainterface.go  null.go  string.go  tuple.go  type.go  types.go  var.go
irgen/codegen/utils/: BUILD.bazel  utils.go
irgen/error/: BUILD.bazel  diagnostic.go  errors.go
irgen/lexer/: BUILD.bazel  lexer.go  types.go
irgen/parser/: BUILD.bazel  expr.go  lookup.go  parser.go  reserved.go  stmt.go  types.go  utils.go
irgen/test/: BUILD.bazel  expression_test.go  statement_test.go  typecast_test.go
irgen/utils/: BUILD.bazel  util.go
irgen/utils/logger/: BUILD.bazel  logger.go
irgen/utils/testutils/: BUILD.bazel  compile.go
test/: BUILD.bazel  CMakeLists.txt  asyncio_test.c  expression_test.go  io_test.c  llvm_test.go  scheduler_test.c  statement_test.go  syncio_test.c  typecast_test.go
test/asyncio_test/: aprintf.c  ascan.c
test/data/: test__public__sfread.txt
test/integration/: BUILD.bazel  gc_test.c  scheduler_test.c
test/integration/asyncio_test/: afread.c  afwrite.c  aprintf.c  ascan.c
test/integration/netio_test/: anread.c  anwrite.c
test/integration/sync/: mutex.c
test/stress/: BUILD.bazel  alloc_stress_test.c
test/stress/netio/: concurrent_connections_test.c  large_transfer_test.c  mixed_operations_test.c  rapid_cycles_test.c
test/stress/scheduler/: compute_heavy_test.c  many_short_tasks_test.c  mixed_workload_test.c  nested_spawning_test.c  rapid_cycles_test.c  task_yielding_test.c
test/unit/: BUILD.bazel  alloc_test.c  array_test.c  atomic_test.c  queue_test.c  str_test.c  syncio_test.c
test/unity/: BUILD.bazel
(+512 files in other folders)
