load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/nagarajRPoojari/picasso
gazelle(name = "gazelle")

filegroup(
    name = "runtime_headers",
    srcs = glob([
        "runtime/headers/*.h",
        "runtime/headers/platform/*.h"
        ]),
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
)

config_setting(
    name = "arm64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

config_setting(
    name = "x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

cc_library(
    name = "runtime_lib",
    defines = select({
        "//:linux": ["PLATFORM_UCONTEXT=1"],
        "//:macos": ["PLATFORM_ASM_CONTEXT=1"],
    }),
    srcs = glob(
        [
            "runtime/src/*.c",
            "runtime/src/platform/common/*.c",
        ],
        allow_empty = True,
    ) + select({
        "//:linux": glob(
            [
                "runtime/src/platform/linux/*.c",
                "runtime/src/platform/arch/*.S",
            ],
            allow_empty = True,
        ),
        "//:macos": glob(
            [
                "runtime/src/platform/darwin/*.c",
                "runtime/src/platform/arch/*.S",
            ],
            allow_empty = True,
        ),
    }) + select({
        "//:arm64": glob(
            [
                "runtime/src/platform/arch/arm64/*.S",
            ],
            allow_empty = True,
        ),
        "//:x86_64": glob(
            [
                "runtime/src/platform/arch/x86_64/*.S",
            ],
            allow_empty = True,
        ),
    }),
    hdrs = glob(["runtime/headers/**/*.h"]),
    copts = [
        "-std=c11",
        "-g",
        "-O0",
        "-fno-omit-frame-pointer",
        "-D_GNU_SOURCE",
        "-D_POSIX_C_SOURCE=200809L",
    ],
    includes = [
        "runtime/headers",
        "runtime/headers/platform",
    ],
    linkopts = select({
        "//:linux": [
            "-luring",
            "-lunwind",
            "-Wl,--no-as-needed",
        ],
        "//:macos": [],
    }),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "runtime_lib_test",
    defines = select({
        "//:linux": ["PLATFORM_UCONTEXT=1"],
        "//:macos": ["PLATFORM_ASM_CONTEXT=1"],
    }),
    srcs = glob(
        [
            "runtime/src/*.c",
            "runtime/src/platform/common/*.c",
        ],
        exclude = [
            "runtime/src/main.c",
        ],
        allow_empty = True,
    ) + select({
        "//:linux": glob(
            [
                "runtime/src/platform/linux/*.c",
                "runtime/src/platform/arch/*.S",
            ],
            allow_empty = True,
        ),
        "//:macos": glob(
            [
                "runtime/src/platform/darwin/*.c",
                "runtime/src/platform/arch/*.S",
            ],
            allow_empty = True,
        ),
    }) + select({
        "//:arm64": glob(
            [
                "runtime/src/platform/arch/arm64/*.S",
            ],
            allow_empty = True,
        ),
        "//:x86_64": glob(
            [
                "runtime/src/platform/arch/x86_64/*.S",
            ],
            allow_empty = True,
        ),
    }),
    hdrs = glob(["runtime/headers/**/*.h"]),
    copts = [
        "-std=c11",
        "-g",
        "-O0",
        "-fno-omit-frame-pointer",
        "-D_GNU_SOURCE",
        "-D_POSIX_C_SOURCE=200809L",
    ],
    includes = [
        "runtime/headers",
        "runtime/headers/platform",
    ],
    linkopts = select({
        "//:linux": [
            "-luring",
            "-lunwind",
            "-Wl,--no-as-needed",
        ],
        "//:macos": [],
    }),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "system_libs",
    linkopts = select({
        "//:linux": [
            "-lffi",               # Fixes ffi_prep_cif, ffi_call, etc.
            "-luring",             # For io_uring
            "-lunwind",            # Generic unwind logic
            "-lunwind-aarch64",    # Fixes _Uaarch64_init_local, _Uaarch64_step, etc.
            "-Wl,--no-as-needed",  # Ensures these aren't optimized away
        ],
        "//:macos": [
            "-lffi",
            # macOS uses an integrated unwinder in libSystem, 
            # so -lunwind-arch is typically not needed here.
        ],
    }),
    visibility = ["//visibility:public"],
)
