load("@gazelle//:def.bzl", "gazelle")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/nagarajRPoojari/picasso
gazelle(name = "gazelle")

platform(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "libffi_macos",
    includes = [
        "/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/ffi/*.h",
    ],
    linkopts = ["-lffi"],
    textual_hdrs = [],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "runtime_headers",
    srcs = glob([
        "runtime/headers/*.h",
        "runtime/headers/platform/*.h",
    ]) + select({
        ":linux": ["runtime/headers/platform/linux"],
        ":macos": ["runtime/headers/platform/darwin"],
    }),
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
)

config_setting(
    name = "arm64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

config_setting(
    name = "x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

cc_library(
    name = "runtime_lib",
    srcs = glob(
        [
            "runtime/src/*.c",
            "runtime/src/platform/common/*.c",
        ],
        allow_empty = True,
    ) + select({
        "//:linux": glob(
            [
                "runtime/src/platform/linux/*.c",
            ],
            allow_empty = True,
        ),
        "//:macos": glob(
            [
                "runtime/src/platform/darwin/*.c",
                "runtime/src/platform/darwin/*.S",
            ],
            allow_empty = True,
        ),
    }) + select({
        "//:arm64": glob(
            [
                "runtime/src/platform/arch/arm64/*.S",
            ],
            allow_empty = True,
        ),
        "//:x86_64": glob(
            [
                "runtime/src/platform/arch/x86_64/*.S",
            ],
            allow_empty = True,
        ),
    }),
    hdrs = glob(["runtime/headers/**/*.h"]),
    copts = [
        "-std=c11",
        "-g",
        "-O0",
        "-fno-omit-frame-pointer",
    ] + select({
        "//:linux": [
            "-D_GNU_SOURCE",
            "-D_POSIX_C_SOURCE=200809L",
        ],
        "//:macos": [
            "-D_DARWIN_C_SOURCE",
        ],
    }),
    defines = select({
        "//:linux": ["PLATFORM_UCONTEXT=1"],
        "//:macos": ["PLATFORM_ASM_CONTEXT=1"],
    }),
    includes = [
        "runtime/headers",
        "runtime/headers/platform",
    ] + select({
        ":linux": ["runtime/headers/platform/linux"],
        ":macos": ["runtime/headers/platform/darwin"],
    }),
    linkopts = select({
        "//:linux": [
            "-luring",
            "-lunwind",
            "-Wl,--no-as-needed",
        ],
        "//:macos": ["-lffi", "-Wl,-ld_classic"],
    }),
    visibility = ["//visibility:public"],
    deps = select({
        "//:macos": [":libffi_macos"],
        "//conditions:default": [],
    }),
)

cc_library(
    name = "runtime_lib_test",
    srcs = glob(
        [
            "runtime/src/*.c",
            "runtime/src/platform/common/*.c",
        ],
        allow_empty = True,
        exclude = [
            "runtime/src/main.c",
        ],
    ) + select({
        "//:linux": glob(
            [
                "runtime/src/platform/linux/*.c",
            ],
            allow_empty = True,
        ),
        "//:macos": glob(
            [
                "runtime/src/platform/darwin/*.c",
                "runtime/src/platform/darwin/*.S",
            ],
            allow_empty = True,
        ),
    }) + select({
        "//:arm64": glob(
            [
                "runtime/src/platform/arch/arm64/*.S",
            ],
            allow_empty = True,
        ),
        "//:x86_64": glob(
            [
                "runtime/src/platform/arch/x86_64/*.S",
            ],
            allow_empty = True,
        ),
    }),
    hdrs = glob(["runtime/headers/**/*.h"]),
    copts = [
        "-std=c11",
        "-g",
        "-O0",
        "-fno-omit-frame-pointer",
    ] + select({
        "//:linux": [
            "-D_GNU_SOURCE",
            "-D_POSIX_C_SOURCE=200809L",
        ],
        "//:macos": [
            "-D_DARWIN_C_SOURCE",
        ],
    }),
    defines = select({
        "//:linux": ["PLATFORM_UCONTEXT=1"],
        "//:macos": ["PLATFORM_ASM_CONTEXT=1"],
    }),
    includes = [
        "runtime/headers",
        "runtime/headers/platform",
    ] + select({
        ":linux": ["runtime/headers/platform/linux"],
        ":macos": ["runtime/headers/platform/darwin"],
    }),
    linkopts = select({
        "//:linux": [
            "-luring",
            "-lunwind",
            "-Wl,--no-as-needed",
        ],
        "//:macos": ["-lffi", "-Wl,-ld_classic"],
    }),
    visibility = ["//visibility:public"],
    deps = select({
        "//:macos": [":libffi_macos"],
        "//conditions:default": [],
    }),
    alwayslink = 1,
)

cc_library(
    name = "system_libs",
    linkopts = select({
        "//:linux": [
            "-lffi",
            "-luring",
            "-lunwind",
            "-lunwind-aarch64",
            "-Wl,--no-as-needed",
        ],
        "//:macos": [
            "-lffi",
        ],
    }),
    visibility = ["//visibility:public"],
)

go_library(
    name = "picasso_lib",
    srcs = [
        "hello.s",
        "temp_go.go",
    ],
    importpath = "github.com/nagarajRPoojari/picasso",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "picasso",
    embed = [":picasso_lib"],
    visibility = ["//visibility:public"],
)
