module(
    name = "picasso",
    version = "0.1",
)

# Standard dependencies
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

# Configure the Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()

# Go Dependencies via Gazelle
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//irgen:go.mod")
use_repo(
    go_deps, 
    "com_github_fatih_color", 
    "com_github_llir_llvm", 
    "com_github_spf13_cobra", 
    "com_github_stretchr_testify"
)