module(
    name = "picasso",
    version = "0.1",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "rules_go", version = "0.51.0")
bazel_dep(name = "gazelle", version = "0.40.0")

go_sdk = use_extension(
    "@rules_go//go:extensions.bzl",
    "go_sdk",
)
# Force the Linux ARM64 version of Go
go_sdk.download(
    version = "1.23.6",
    goos = "linux",
    goarch = "arm64",
)

go_toolchains = use_extension(
    "@rules_go//go:extensions.bzl",
    "go_register_toolchains",
)
go_toolchains.register()

go_deps = use_extension(
    "@gazelle//:extensions.bzl",
    "go_deps",
)
go_deps.from_file(go_mod = "//irgen:go.mod")

use_repo(
    go_deps,
    "com_github_fatih_color",
    "com_github_llir_llvm",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
)

local_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:local.bzl",
    "new_local_repository",
)

local_repository(
    name = "libffi",
    path = "/usr",
    build_file = "//:ffi.BUILD",
)

# Add this to the bottom of MODULE.bazel
cc_configure = use_extension("@bazel_tools//tools/cpp:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

# Now register it
register_toolchains("@local_config_cc//:all")