module(
    name = "picasso",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "platforms", version = "1.0.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//irgen:go.mod")

use_repo(
    go_deps,
    "com_github_fatih_color",
    "com_github_llir_llvm",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
)

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "libffi_macos",
    urls = ["https://github.com/libffi/libffi/releases/download/v3.4.4/libffi-3.4.4.tar.gz"],
    strip_prefix = "libffi-3.4.4",
    build_file_content = """
cc_library(
    name = "libffi",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    linkopts = ["-lffi"],
    visibility = ["//visibility:public"],
)
""",
)
