cc_binary(
    name = "niyama",
    srcs = ["main.c"],
    copts = [
        "-g",
        "-O0",
        "-rdynamic",
        "-fno-omit-frame-pointer",
    ],
    data = [
        "//:runtime_lib",
        "//irgen",
    ],
    linkopts = [
        "-L/usr/lib",
        "-L/usr/local/lib",
        "-lgc",
        "-lpthread",
        "-lm",
        "-L/usr/lib/aarch64-linux-gnu",
        "-lffi",
        "-luring",
        "-lunwind",
        "-Wl,--no-as-needed",
    ],
    local_defines = [
        "IRGEN_BIN=\\\"irgen/irgen_/irgen\\\"",
        "RUNTIME_LIB_PATH=\\\"libruntime_lib.a\\\"",
    ],
    deps = [
        "//:runtime_lib",
    ],
)
