cc_binary(
    name = "picasso",
    srcs = select({
        "//:linux": ["cli_linux.c"],
        "//:macos": ["cli_darwin.c"],
    }),
    copts = [
        "-std=c11",
        "-g",
        "-O0",
        "-fno-omit-frame-pointer",
    ],
    data = [
        "//irgen",
        "//libs:ffi_libs",
        "//:runtime_headers",
        "//:runtime_lib",
    ],
    linkopts = [
        "-lm",
        "-lpthread",
    ] + select({
        "//:linux": [
            "-lffi",
            "-luring",
            "-lunwind",
            "-rdynamic",
        ],
        "//:macos": [
            "-lffi",
        ],
    }),
    local_defines = [
        # The triple backslash ensures the quotes reach the C compiler
        'IRGEN_BIN=\\"irgen/irgen_/irgen\\"',
        'RUNTIME_LIB_PATH=\\"libruntime_lib.a\\"',
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:runtime_lib",
    ],
)