load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "picasso",
    srcs = select({
        "@platforms//os:linux": ["cli_linux.c"],
        "@platforms//os:macos": ["cli_darwin.c"],
    }),
    copts = [
        "-std=c11",
        "-g",
        "-O0",
        "-fno-omit-frame-pointer",
    ],
    data = [
        "//:runtime_headers",
        "//:runtime_lib",
        "//irgen",
        "//libs:ffi_libs",
    ],
    linkopts = [
        "-lm",
        "-lpthread",
    ] + select({
        "@platforms//os:linux": [
            "-lffi",
            "-luring",
            "-lunwind",
            "-rdynamic",
        ],
        "@platforms//os:macos": [
            "-L/opt/homebrew/opt/libffi/lib",
            "-lffi",
        ],
    }),
    local_defines = [
        'IRGEN_BIN=\\"irgen/irgen_/irgen\\"',
        'RUNTIME_LIB_PATH=\\"libruntime_lib.a\\"',
    ] + select({
        "@platforms//os:macos": ["_DARWIN_C_SOURCE"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = ["//:runtime_lib"],
)
