load("@rules_cc//cc:defs.bzl", "cc_binary")
load(":e2e_tests.bzl", "e2e_tests")

cc_binary(
    name = "test_runner",
    srcs = ["test_runner.c"],
    copts = [
        "-g",
        "-O0",
        "-fno-omit-frame-pointer",
    ],
    linkopts = ["--coverage"],
    visibility = ["//visibility:public"],
)

e2e_tests(
    name = "all_tests",
    picasso = "//cli:picasso",
    runner = ":test_runner",
)
