load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

COMMON_COPTS = [
    "-g",
    "-O0",
    "-fno-omit-frame-pointer",
    "-D_GNU_SOURCE",
    "-D_POSIX_C_SOURCE=200809L",
]

COMMON_DEPS = [
    "//test/unity:unity",
    "//:runtime_lib_test",
    "//:system_libs",
]

COMMON_LINKOPTS = [
    "-rdynamic",
]

cc_test(
    name = "alloc_test",
    srcs = ["unit/alloc_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "asyncio_test_ascan",
    srcs = ["integration/asyncio_test/ascan.c"],
    copts = COMMON_COPTS,
    data = glob(["data/*"]),
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "asyncio_test_afread",
    srcs = ["integration/asyncio_test/afread.c"],
    copts = COMMON_COPTS,
    data = glob(["data/*"]),
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "asyncio_test_aprintf",
    srcs = ["integration/asyncio_test/aprintf.c"],
    copts = COMMON_COPTS,
    data = glob(["data/*"]),
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "asyncio_test_afwrite",
    srcs = ["integration/asyncio_test/afwrite.c"],
    copts = COMMON_COPTS,
    data = glob(["data/*"]),
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "scheduler_test",
    srcs = ["integration/scheduler_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "syncio_test",
    srcs = ["unit/syncio_test.c"],
    copts = COMMON_COPTS,
    data = glob(["data/*"]),
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "array_test",
    srcs = ["unit/array_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "atomic_test",
    srcs = ["unit/atomic_test.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "netio_test_read",
    srcs = ["integration/netio_test/anread.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "netio_test_write",
    srcs = ["integration/netio_test/anwrite.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "sync_rwmutex_rlock_test",
    srcs = ["integration/sync/rwmutex/rlock.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "sync_rwmutex_rwlock_test",
    srcs = ["integration/sync/rwmutex/rwlock.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)

cc_test(
    name = "sync_mutex_test",
    srcs = ["integration/sync/mutex.c"],
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = COMMON_DEPS,
)
