package(default_visibility = ["//visibility:public"])

filegroup(
    name = "data",
    srcs = glob(["data/*"]),
    visibility = ["//visibility:public"],
)

test_suite(
    name = "unit",
    tests = [
        "//test/unit:all",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "integration",
    tests = [
        "//test/integration:all",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "e2e",
    tests = [
        "//e2e:all_tests",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "stress",
    tests = [
        "//test/stress:all",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "all",
    tests = [
        ":unit",
        ":integration",
        "//test/stress:all",
        "//e2e:all_tests",
    ],
    visibility = ["//visibility:public"],
)
