load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "codegen",
    srcs = [
        "compiler.go",
        "constant.go",
        "llvm.go",
        "utils.go",
    ],
    importpath = "github.com/nagarajRPoojari/niyama/irgen/codegen",
    visibility = ["//visibility:public"],
    deps = [
        "//irgen/ast",
        "//irgen/codegen/c",
        "//irgen/codegen/contract",
        "//irgen/codegen/error",
        "//irgen/codegen/handlers/mediator",
        "//irgen/codegen/handlers/state",
        "//irgen/codegen/libs",
        "//irgen/codegen/libs/func",
        "//irgen/codegen/libs/private/runtime",
        "//irgen/codegen/pipeline",
        "//irgen/codegen/tools",
        "//irgen/codegen/type",
        "//irgen/codegen/utils",
        "//irgen/parser",
        "@com_github_llir_llvm//asm",
        "@com_github_llir_llvm//ir",
        "@com_github_llir_llvm//ir/enum",
        "@com_github_llir_llvm//ir/types",
    ],
)
