load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "codegen",
    srcs = [
        "compiler.go",
        "constant.go",
        "llvm_darwin.go",
        "llvm_linux.go",
        "utils.go",
    ],
    importpath = "github.com/nagarajRPoojari/picasso/irgen/codegen",
    visibility = ["//visibility:public"],
    deps = [
        "//irgen/ast",
        "//irgen/codegen/error",
        "//irgen/codegen/handlers/state",
        "//irgen/codegen/libs",
        "//irgen/codegen/libs/func",
        "//irgen/codegen/pipeline",
        "//irgen/codegen/tools",
        "//irgen/codegen/type",
        "//irgen/codegen/utils",
        "//irgen/parser",
        "@com_github_llir_llvm//asm",
        "@com_github_llir_llvm//ir",
        "@com_github_llir_llvm//ir/enum",
        "@com_github_llir_llvm//ir/types",
    ] + select({
        "@rules_go//go/platform:android": [
            "//irgen/codegen/c",
            "//irgen/codegen/contract",
            "//irgen/codegen/handlers/mediator",
            "//irgen/codegen/libs/private/runtime",
        ],
        "@rules_go//go/platform:darwin": [
            "//irgen/codegen/c",
            "//irgen/codegen/contract",
            "//irgen/codegen/handlers/mediator",
            "//irgen/codegen/libs/private/runtime",
        ],
        "@rules_go//go/platform:ios": [
            "//irgen/codegen/c",
            "//irgen/codegen/contract",
            "//irgen/codegen/handlers/mediator",
            "//irgen/codegen/libs/private/runtime",
        ],
        "@rules_go//go/platform:linux": [
            "//irgen/codegen/c",
            "//irgen/codegen/contract",
            "//irgen/codegen/handlers/mediator",
            "//irgen/codegen/libs/private/runtime",
        ],
        "//conditions:default": [],
    }),
)
